logs/dag_id=rand_user/run_id=manual__2023-11-22T05:54:25.135106+00:00/task_id=Create_table/attempt=1.log
[2023-11-22T05:54:27.247+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.Create_table manual__2023-11-22T05:54:25.135106+00:00 [queued]>
[2023-11-22T05:54:27.267+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: rand_user.Create_table manual__2023-11-22T05:54:25.135106+00:00 [queued]>
[2023-11-22T05:54:27.268+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-22T05:54:27.268+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 3
[2023-11-22T05:54:27.269+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-22T05:54:27.294+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): Create_table> on 2023-11-22 05:54:25.135106+00:00
[2023-11-22T05:54:27.304+0000] {standard_task_runner.py:55} INFO - Started process 6705 to run task
[2023-11-22T05:54:27.311+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'rand_user', 'Create_table', 'manual__2023-11-22T05:54:25.135106+00:00', '--job-id', '756', '--raw', '--subdir', 'DAGS_FOLDER/predictions.py', '--cfg-path', '/tmp/tmp2itgzaw6']
[2023-11-22T05:54:27.315+0000] {standard_task_runner.py:83} INFO - Job 756: Subtask Create_table
[2023-11-22T05:54:27.451+0000] {task_command.py:376} INFO - Running <TaskInstance: rand_user.Create_table manual__2023-11-22T05:54:25.135106+00:00 [running]> on host 91f7624ceef9
[2023-11-22T05:54:27.600+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=Gaurav
AIRFLOW_CTX_DAG_ID=rand_user
AIRFLOW_CTX_TASK_ID=Create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-22T05:54:25.135106+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2023-11-22T05:54:25.135106+00:00
[2023-11-22T05:54:27.627+0000] {base.py:71} INFO - Using connection ID 'source_db_***' for task execution.
[2023-11-22T05:54:27.639+0000] {sql.py:315} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS rand_users (
        gender TEXT NOT NULL,
        title TEXT NOT NULL,
        firstname TEXT NOT NULL,
        lastname TEXT NOT NULL,
        country TEXT NOT NULL,
        username TEXT NOT NULL,
        password TEXT NOT NULL,
        email TEXT NOT NULL,
        )
        , parameters: None
[2023-11-22T05:54:27.643+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 11:         )
                 ^

[2023-11-22T05:54:27.665+0000] {taskinstance.py:1406} INFO - Marking task as UP_FOR_RETRY. dag_id=rand_user, task_id=Create_table, execution_date=20231122T055425, start_date=20231122T055427, end_date=20231122T055427
[2023-11-22T05:54:27.692+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 756 for task Create_table (syntax error at or near ")"
LINE 11:         )
                 ^
; 6705)
[2023-11-22T05:54:27.722+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-22T05:54:27.797+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
